- wxWindowBase::SetBestFittingSize --> wxWindowBase::SetInitialSize.
- Seeking on a zip stream returned from wxFileSystem without using the new
  wxFS_SEEKABLE flags is deprecated. You can still seek, but use the flag.
- Constructor wxZipInputStream(const wxString& archive, const wxString& file)
  deprecated in favour of wxFileSystem (other zip ctors are not deprecated).



Major new features in 2.8 release
---------------------------------

- New AUI library supporting docking windows and much more.
- New rich text control library implementing a generic wxRichTextCtrl,
  using only the wxWidgets API. Also includes formatting dialogs, conversion
  to HTML, and printing classes.
- New wxComboCtrl class giving the ability to create custom, graphical
  comboboxes. Associated classes include wxOwnerDrawnComboBox, wxComboPopup
  and wxBitmapComboBox.
- Further functionality including wxAnimationCtrl (moved from contrib/src/anim
  and enhanced), wxSimpleHtmlListBox, wxHyperlinkCtrl, wxColourPickerCtrl,
  wxDirPickerCtrl, wxFilePickerCtrl, wxFontPickerCtrl, wxCollapsiblePane,
  wxSearchCtrl, wxAboutBox, wxTreebook, tar streams.


2.8.1
-----

All:

- Fix compilation with wxUSE_STL=1
- wxGrid::GetBestSize() returns same size the grid would have after AutoSize()

wxMSW:

- Fixed compilation with Borland C++ in Unicode mode but without MSLU

wxGTK:

- Don't crash if command line is not valid UTF-8 (Unicode build only)

wxUniv:

- It is now possible to set background colour of wxStaticText


2.8.0
-----

All:

- Added wxSearchCtrl (Vince Harron)
- wxCSConv("UTF-16/32") now behaves correctly, i.e. same as wxMBConvUTF16/32
- wxArrayString::Alloc() now works as reserve() and doesn't clear array contents
- Fixed long standing bug in wxFileConfig groups renaming (Antti Koivisto).
- New option wxFS_READ | wxFS_SEEKABLE for wxFileSystem::OpenFile() to return
  a stream that is seekable.
- Fixed bug in wxCalendarCtrl::HitTest() when clicking on month change arrows